--- a/_config.yml
+++ b/_config.yml
@@ -13,15 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
-email:
+title: Junhyun Lim
+email: limjunhyun@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
-minimal_mistakes_skin: default
+  A lil blog for Junhyun Lim! 
+  I post things that I find interesting every once in a while.
+twitter_username: ensjtrans
+github_username: ensj
+minimal_mistakes_skin: dirt
 search: true
 
 # Build settings
@@ -58,34 +57,37 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
-  avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  name   : "Junhyun Lim"
+  avatar : "/assets/images/avatar.jpg"
+  bio    : "I'm a math & cs student from Santa Clara University. I go by Jimmy and Ensj as well!"
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://"
+      url: "https://ensj.github.io"
+    - label: "Wordpress"
+      icon: "fas fa-fw fa-link"
+      url: "ensjtrans.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+      url: "https://twitter.com/ensjtrans"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      url: "https://github.com/ensj"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://instagram.com/lim.junhyunun"
 
 footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+      url: "https://twitter.com/ensjtrans"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      url: "https://github.com/ensj"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://instagram.com/lim.junhyunun"
 
 defaults:
   # _posts
@@ -113,3 +115,17 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
+
+google_site_verification: 7EOKyx_7qQReX0OkZEBoYbsXhk3hGcNrGWrB5t-RAN4
+
+analytics: 
+  provider: google-gtag
+  google:
+    tracking_id: UA-179039734-1
+
+comments:
+  provider: disqus # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
+  disqus:
+    shortname: ensj-github-io
+
+  
