--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-markdown": "^8.0.3",
+    "react-pdf": "^5.7.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.3",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@types/d3": "^7.1.0",
+    "@types/react-pdf": "^5.7.1",
     "gh-pages": "^3.2.3"
   }
 }
