--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "react-pdf": "^5.7.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "rehype-katex": "^6.0.2",
+    "remark-extract-frontmatter": "^3.2.0",
+    "remark-frontmatter": "^4.0.1",
+    "remark-math": "^5.1.1",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
